Update standalone_text_clustering_OpenAI.ipynb missing openai import

--- a/Synapse/notebooks/text_clustering/standalone_text_clustering_OpenAI.ipynb
+++ b/Synapse/notebooks/text_clustering/standalone_text_clustering_OpenAI.ipynb
@@ -225,6 +225,7 @@
         "import ntpath\n",
         "import os\n",
         "import numpy as np\n",
+        "import openai\n",
         "\n",
         "from pyspark.ml.linalg import Vectors, VectorUDT\n",
         "from pyspark.sql.functions import udf,col\n",
