drop OpenAI Features pre-write

--- a/Synapse/notebooks/text_clustering/standalone_text_clustering_OpenAI.ipynb
+++ b/Synapse/notebooks/text_clustering/standalone_text_clustering_OpenAI.ipynb
@@ -381,7 +381,7 @@
         "    df_coords = df_coords.withColumn(\"blob_path\", udf_build_sas_path(df_coords.filename)).withColumn(\"X\", udf_get_X(df_coords.pca_scatterplot_features).cast('string')).withColumn(\"Y\", udf_get_Y(df_coords.pca_scatterplot_features).cast('string')).withColumn(\"text\", udf_remove_separator(df.text))\n",
         "\n",
         "df_graph = df_coords\n",
-        "df_coords = df_coords.drop('pca_features', 'pca_scatterplot_features', 'tokens', 'word_count_vector', 'pca_features', 'features', 'rawFeatures', 'stopWordsRemovedTokens')\n"
+        "df_coords = df_coords.drop('pca_features', 'pca_scatterplot_features', 'tokens', 'word_count_vector', 'pca_features', 'features', 'rawFeatures', 'stopWordsRemovedTokens', 'OpenAI_features')\n"
       ],
       "outputs": [
         {
